--- a/address-book-test1/test-output/index.html
+++ b/address-book-test1/test-output/index.html
@@ -48,7 +48,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Default_suite">
-                    <span>C:\Users\Mikhail\AppData\Local\Temp\testng-eclipse--1935141766\testng-customsuite.xml</span>
+                    <span>C:\Users\Mikhail\AppData\Local\Temp\testng-eclipse--915129748\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -90,7 +90,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">1 method,   1 passed</span>
+                    <span class="method-stats">6 methods,   6 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -101,7 +101,32 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="addressbook.tests.GroupRemovalTests" hash-for-method="deleteSomeGroup">deleteSomeGroup</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
                         <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="addressbook.tests.GroupModificationTests" hash-for-method="modifySomeGroup">modifySomeGroup</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="addressbook.tests.AddContact" hash-for-method="testAddContact">testAddContact</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="addressbook.tests.EmptyContactCreation" hash-for-method="testAddEmptyContact">testAddEmptyContact</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="addressbook.tests.EmptyGroupCreation" hash-for-method="testNonEmptyGroupCreation">testNonEmptyGroupCreation</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="addressbook.tests.NonEmptyGroupCreation" hash-for-method="testNonEmptyGroupCreation">testNonEmptyGroupCreation</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -119,6 +144,36 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
+              <span class="class-name">addressbook.tests.EmptyContactCreation</span>
+            </div> <!-- main-panel-header rounded-window-top -->
+            <div class="main-panel-content rounded-window-bottom">
+              <div class="method">
+                <div class="method-content">
+                  <a name="testAddEmptyContact">
+                  </a> <!-- testAddEmptyContact -->
+                  <span class="method-name">testAddEmptyContact</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+            </div> <!-- main-panel-content rounded-window-bottom -->
+          </div> <!-- suite-Default_suite-class-passed -->
+          <div class="suite-Default_suite-class-passed">
+            <div class="main-panel-header rounded-window-top">
+              <img src="passed.png"/>
+              <span class="class-name">addressbook.tests.GroupRemovalTests</span>
+            </div> <!-- main-panel-header rounded-window-top -->
+            <div class="main-panel-content rounded-window-bottom">
+              <div class="method">
+                <div class="method-content">
+                  <a name="deleteSomeGroup">
+                  </a> <!-- deleteSomeGroup -->
+                  <span class="method-name">deleteSomeGroup</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+            </div> <!-- main-panel-content rounded-window-bottom -->
+          </div> <!-- suite-Default_suite-class-passed -->
+          <div class="suite-Default_suite-class-passed">
+            <div class="main-panel-header rounded-window-top">
+              <img src="passed.png"/>
               <span class="class-name">addressbook.tests.GroupModificationTests</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
@@ -131,10 +186,55 @@
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
           </div> <!-- suite-Default_suite-class-passed -->
+          <div class="suite-Default_suite-class-passed">
+            <div class="main-panel-header rounded-window-top">
+              <img src="passed.png"/>
+              <span class="class-name">addressbook.tests.AddContact</span>
+            </div> <!-- main-panel-header rounded-window-top -->
+            <div class="main-panel-content rounded-window-bottom">
+              <div class="method">
+                <div class="method-content">
+                  <a name="testAddContact">
+                  </a> <!-- testAddContact -->
+                  <span class="method-name">testAddContact</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+            </div> <!-- main-panel-content rounded-window-bottom -->
+          </div> <!-- suite-Default_suite-class-passed -->
+          <div class="suite-Default_suite-class-passed">
+            <div class="main-panel-header rounded-window-top">
+              <img src="passed.png"/>
+              <span class="class-name">addressbook.tests.EmptyGroupCreation</span>
+            </div> <!-- main-panel-header rounded-window-top -->
+            <div class="main-panel-content rounded-window-bottom">
+              <div class="method">
+                <div class="method-content">
+                  <a name="testNonEmptyGroupCreation">
+                  </a> <!-- testNonEmptyGroupCreation -->
+                  <span class="method-name">testNonEmptyGroupCreation</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+            </div> <!-- main-panel-content rounded-window-bottom -->
+          </div> <!-- suite-Default_suite-class-passed -->
+          <div class="suite-Default_suite-class-passed">
+            <div class="main-panel-header rounded-window-top">
+              <img src="passed.png"/>
+              <span class="class-name">addressbook.tests.NonEmptyGroupCreation</span>
+            </div> <!-- main-panel-header rounded-window-top -->
+            <div class="main-panel-content rounded-window-bottom">
+              <div class="method">
+                <div class="method-content">
+                  <a name="testNonEmptyGroupCreation">
+                  </a> <!-- testNonEmptyGroupCreation -->
+                  <span class="method-name">testNonEmptyGroupCreation</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+            </div> <!-- main-panel-content rounded-window-bottom -->
+          </div> <!-- suite-Default_suite-class-passed -->
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\Mikhail\AppData\Local\Temp\testng-eclipse--1935141766\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\Mikhail\AppData\Local\Temp\testng-eclipse--915129748\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -143,7 +243,15 @@
 &lt;suite name=&quot;Default suite&quot;&gt;
   &lt;test verbose=&quot;2&quot; name=&quot;Default test&quot;&gt;
     &lt;classes&gt;
+      &lt;class name=&quot;addressbook.tests.ContactData&quot;/&gt;
       &lt;class name=&quot;addressbook.tests.GroupModificationTests&quot;/&gt;
+      &lt;class name=&quot;addressbook.tests.GroupRemovalTests&quot;/&gt;
+      &lt;class name=&quot;addressbook.tests.AddContact&quot;/&gt;
+      &lt;class name=&quot;addressbook.tests.GroupData&quot;/&gt;
+      &lt;class name=&quot;addressbook.tests.TestBase&quot;/&gt;
+      &lt;class name=&quot;addressbook.tests.NonEmptyGroupCreation&quot;/&gt;
+      &lt;class name=&quot;addressbook.tests.EmptyContactCreation&quot;/&gt;
+      &lt;class name=&quot;addressbook.tests.EmptyGroupCreation&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -157,7 +265,7 @@
           <div class="main-panel-content rounded-window-bottom">
             <ul>
               <li>
-                <span class="test-name">Default test (1 class)</span>
+                <span class="test-name">Default test (9 classes)</span>
               </li>
             </ul>
           </div> <!-- main-panel-content rounded-window-bottom -->
@@ -183,16 +291,36 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(1);
+data.addRows(6);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'modifySomeGroup')
-data.setCell(0, 2, 'addressbook.tests.GroupModificationTests')
-data.setCell(0, 3, 849);
+data.setCell(0, 1, 'testAddContact')
+data.setCell(0, 2, 'addressbook.tests.AddContact')
+data.setCell(0, 3, 1624);
+data.setCell(1, 0, 1)
+data.setCell(1, 1, 'testAddEmptyContact')
+data.setCell(1, 2, 'addressbook.tests.EmptyContactCreation')
+data.setCell(1, 3, 1568);
+data.setCell(2, 0, 2)
+data.setCell(2, 1, 'modifySomeGroup')
+data.setCell(2, 2, 'addressbook.tests.GroupModificationTests')
+data.setCell(2, 3, 1357);
+data.setCell(3, 0, 3)
+data.setCell(3, 1, 'testNonEmptyGroupCreation')
+data.setCell(3, 2, 'addressbook.tests.NonEmptyGroupCreation')
+data.setCell(3, 3, 970);
+data.setCell(4, 0, 4)
+data.setCell(4, 1, 'deleteSomeGroup')
+data.setCell(4, 2, 'addressbook.tests.GroupRemovalTests')
+data.setCell(4, 3, 867);
+data.setCell(5, 0, 5)
+data.setCell(5, 1, 'testNonEmptyGroupCreation')
+data.setCell(5, 2, 'addressbook.tests.EmptyGroupCreation')
+data.setCell(5, 3, 843);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 849 ms</span>
+              <span class="suite-total-time">Total running time: 7 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -207,9 +335,63 @@ return data;
         </div> <!-- panel -->
         <div panel-name="ignored-methods-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">0 ignored methods</span>
+            <span class="header-content">12 ignored methods</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
+            <div class="ignored-class-div">
+              <span class="ignored-class-name">addressbook.tests.TestBase</span>
+              <div class="ignored-methods-div">
+                <span class="ignored-method-name">tearDown</span>
+                <br/>
+                <span class="ignored-method-name">setUp</span>
+                <br/>
+              </div> <!-- ignored-methods-div -->
+            </div> <!-- ignored-class-div -->
+            <div class="ignored-class-div">
+              <span class="ignored-class-name">addressbook.tests.GroupRemovalTests</span>
+              <div class="ignored-methods-div">
+                <span class="ignored-method-name">tearDown</span>
+                <br/>
+                <span class="ignored-method-name">setUp</span>
+                <br/>
+              </div> <!-- ignored-methods-div -->
+            </div> <!-- ignored-class-div -->
+            <div class="ignored-class-div">
+              <span class="ignored-class-name">addressbook.tests.GroupModificationTests</span>
+              <div class="ignored-methods-div">
+                <span class="ignored-method-name">tearDown</span>
+                <br/>
+                <span class="ignored-method-name">setUp</span>
+                <br/>
+              </div> <!-- ignored-methods-div -->
+            </div> <!-- ignored-class-div -->
+            <div class="ignored-class-div">
+              <span class="ignored-class-name">addressbook.tests.AddContact</span>
+              <div class="ignored-methods-div">
+                <span class="ignored-method-name">tearDown</span>
+                <br/>
+                <span class="ignored-method-name">setUp</span>
+                <br/>
+              </div> <!-- ignored-methods-div -->
+            </div> <!-- ignored-class-div -->
+            <div class="ignored-class-div">
+              <span class="ignored-class-name">addressbook.tests.EmptyGroupCreation</span>
+              <div class="ignored-methods-div">
+                <span class="ignored-method-name">tearDown</span>
+                <br/>
+                <span class="ignored-method-name">setUp</span>
+                <br/>
+              </div> <!-- ignored-methods-div -->
+            </div> <!-- ignored-class-div -->
+            <div class="ignored-class-div">
+              <span class="ignored-class-name">addressbook.tests.NonEmptyGroupCreation</span>
+              <div class="ignored-methods-div">
+                <span class="ignored-method-name">tearDown</span>
+                <br/>
+                <span class="ignored-method-name">setUp</span>
+                <br/>
+              </div> <!-- ignored-methods-div -->
+            </div> <!-- ignored-class-div -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
         <div panel-name="chronological-Default_suite" class="panel">
@@ -218,18 +400,59 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">addressbook.tests.GroupModificationTests</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">addressbook.tests.EmptyContactCreation</div> <!-- chronological-class-name -->
               <div class="configuration-test before">
                 <span class="method-name">setUp</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-test before -->
+            </div> <!-- chronological-class -->
+            <div class="chronological-class">
+              <div class="chronological-class-name">addressbook.tests.GroupModificationTests</div> <!-- chronological-class-name -->
               <div class="test-method">
                 <span class="method-name">modifySomeGroup</span>
-                <span class="method-start">2519 ms</span>
+                <span class="method-start">3759 ms</span>
               </div> <!-- test-method -->
+            </div> <!-- chronological-class -->
+            <div class="chronological-class">
+              <div class="chronological-class-name">addressbook.tests.NonEmptyGroupCreation</div> <!-- chronological-class-name -->
+              <div class="test-method">
+                <span class="method-name">testNonEmptyGroupCreation</span>
+                <span class="method-start">5117 ms</span>
+              </div> <!-- test-method -->
+            </div> <!-- chronological-class -->
+            <div class="chronological-class">
+              <div class="chronological-class-name">addressbook.tests.GroupRemovalTests</div> <!-- chronological-class-name -->
+              <div class="test-method">
+                <span class="method-name">deleteSomeGroup</span>
+                <span class="method-start">6089 ms</span>
+              </div> <!-- test-method -->
+            </div> <!-- chronological-class -->
+            <div class="chronological-class">
+              <div class="chronological-class-name">addressbook.tests.EmptyContactCreation</div> <!-- chronological-class-name -->
+              <div class="test-method">
+                <span class="method-name">testAddEmptyContact</span>
+                <span class="method-start">6958 ms</span>
+              </div> <!-- test-method -->
+            </div> <!-- chronological-class -->
+            <div class="chronological-class">
+              <div class="chronological-class-name">addressbook.tests.AddContact</div> <!-- chronological-class-name -->
+              <div class="test-method">
+                <span class="method-name">testAddContact</span>
+                <span class="method-start">8527 ms</span>
+              </div> <!-- test-method -->
+            </div> <!-- chronological-class -->
+            <div class="chronological-class">
+              <div class="chronological-class-name">addressbook.tests.EmptyGroupCreation</div> <!-- chronological-class-name -->
+              <div class="test-method">
+                <span class="method-name">testNonEmptyGroupCreation</span>
+                <span class="method-start">10152 ms</span>
+              </div> <!-- test-method -->
+            </div> <!-- chronological-class -->
+            <div class="chronological-class">
+              <div class="chronological-class-name">addressbook.tests.EmptyContactCreation</div> <!-- chronological-class-name -->
               <div class="configuration-test after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">3369 ms</span>
+                <span class="method-start">10996 ms</span>
               </div> <!-- configuration-test after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
