--- a/address-book-test1/test-output/old/Default suite/methods.html
+++ b/address-book-test1/test-output/old/Default suite/methods.html
@@ -1,10 +1,20 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="96978f">  <td>15/08/30 20:00:58</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;TestBase.setUp()[pri:0, instance:addressbook.tests.GroupModificationTests@707561aa]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@350881572</td>   <td></td> </tr>
-<tr bgcolor="aeecff">  <td>15/08/30 20:01:00</td>   <td>2518</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GroupModificationTests.modifySomeGroup()[pri:0, instance:addressbook.tests.GroupModificationTests@707561aa]">modifySomeGroup</td> 
-  <td>main@350881572</td>   <td></td> </tr>
-<tr bgcolor="96978f">  <td>15/08/30 20:01:01</td>   <td>3368</td> <td>&nbsp;</td><td title="&lt;&lt;TestBase.tearDown()[pri:0, instance:addressbook.tests.GroupModificationTests@707561aa]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@350881572</td>   <td></td> </tr>
+<tr bgcolor="98c865">  <td>15/08/30 20:43:34</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;TestBase.setUp()[pri:0, instance:addressbook.tests.EmptyContactCreation@51f49ec4]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@637513493</td>   <td></td> </tr>
+<tr bgcolor="62e1bc">  <td>15/08/30 20:43:38</td>   <td>3755</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GroupModificationTests.modifySomeGroup()[pri:0, instance:addressbook.tests.GroupModificationTests@3889c1ee]">modifySomeGroup</td> 
+  <td>main@637513493</td>   <td></td> </tr>
+<tr bgcolor="73c58f">  <td>15/08/30 20:43:39</td>   <td>5113</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NonEmptyGroupCreation.testNonEmptyGroupCreation()[pri:0, instance:addressbook.tests.NonEmptyGroupCreation@6ebbd7d]">testNonEmptyGroupCreation</td> 
+  <td>main@637513493</td>   <td></td> </tr>
+<tr bgcolor="b964b7">  <td>15/08/30 20:43:40</td>   <td>6085</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GroupRemovalTests.deleteSomeGroup()[pri:0, instance:addressbook.tests.GroupRemovalTests@bec15c7]">deleteSomeGroup</td> 
+  <td>main@637513493</td>   <td></td> </tr>
+<tr bgcolor="96978f">  <td>15/08/30 20:43:41</td>   <td>6954</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EmptyContactCreation.testAddEmptyContact()[pri:0, instance:addressbook.tests.EmptyContactCreation@51f49ec4]">testAddEmptyContact</td> 
+  <td>main@637513493</td>   <td></td> </tr>
+<tr bgcolor="6abde0">  <td>15/08/30 20:43:42</td>   <td>8523</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddContact.testAddContact()[pri:0, instance:addressbook.tests.AddContact@5c1b0d41]">testAddContact</td> 
+  <td>main@637513493</td>   <td></td> </tr>
+<tr bgcolor="b8a3a4">  <td>15/08/30 20:43:44</td>   <td>10148</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EmptyGroupCreation.testNonEmptyGroupCreation()[pri:0, instance:addressbook.tests.EmptyGroupCreation@740355a4]">testNonEmptyGroupCreation</td> 
+  <td>main@637513493</td>   <td></td> </tr>
+<tr bgcolor="98c865">  <td>15/08/30 20:43:45</td>   <td>10992</td> <td>&nbsp;</td><td title="&lt;&lt;TestBase.tearDown()[pri:0, instance:addressbook.tests.EmptyContactCreation@51f49ec4]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@637513493</td>   <td></td> </tr>
 </table>
