Lesson3 Part2 (Bad add empty contact)
(Bad add empty contact) Cannot create empty contact if run package.

--- a/address-book-test1/test-output/old/Default suite/methods-alphabetical.html
+++ b/address-book-test1/test-output/old/Default suite/methods-alphabetical.html
@@ -1,20 +1,24 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="b964b7">  <td>15/08/30 20:43:40</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GroupRemovalTests.deleteSomeGroup()[pri:0, instance:addressbook.tests.GroupRemovalTests@bec15c7]">deleteSomeGroup</td> 
-  <td>main@637513493</td>   <td></td> </tr>
-<tr bgcolor="62e1bc">  <td>15/08/30 20:43:38</td>   <td>-2330</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GroupModificationTests.modifySomeGroup()[pri:0, instance:addressbook.tests.GroupModificationTests@3889c1ee]">modifySomeGroup</td> 
-  <td>main@637513493</td>   <td></td> </tr>
-<tr bgcolor="98c865">  <td>15/08/30 20:43:34</td>   <td>-6085</td> <td>&nbsp;</td><td title="&gt;&gt;TestBase.setUp()[pri:0, instance:addressbook.tests.EmptyContactCreation@51f49ec4]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@637513493</td>   <td></td> </tr>
-<tr bgcolor="98c865">  <td>15/08/30 20:43:45</td>   <td>4907</td> <td>&nbsp;</td><td title="&lt;&lt;TestBase.tearDown()[pri:0, instance:addressbook.tests.EmptyContactCreation@51f49ec4]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@637513493</td>   <td></td> </tr>
-<tr bgcolor="6abde0">  <td>15/08/30 20:43:42</td>   <td>2438</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddContact.testAddContact()[pri:0, instance:addressbook.tests.AddContact@5c1b0d41]">testAddContact</td> 
-  <td>main@637513493</td>   <td></td> </tr>
-<tr bgcolor="96978f">  <td>15/08/30 20:43:41</td>   <td>869</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EmptyContactCreation.testAddEmptyContact()[pri:0, instance:addressbook.tests.EmptyContactCreation@51f49ec4]">testAddEmptyContact</td> 
-  <td>main@637513493</td>   <td></td> </tr>
-<tr bgcolor="73c58f">  <td>15/08/30 20:43:39</td>   <td>-972</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NonEmptyGroupCreation.testNonEmptyGroupCreation()[pri:0, instance:addressbook.tests.NonEmptyGroupCreation@6ebbd7d]">testNonEmptyGroupCreation</td> 
-  <td>main@637513493</td>   <td></td> </tr>
-<tr bgcolor="b8a3a4">  <td>15/08/30 20:43:44</td>   <td>4063</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EmptyGroupCreation.testNonEmptyGroupCreation()[pri:0, instance:addressbook.tests.EmptyGroupCreation@740355a4]">testNonEmptyGroupCreation</td> 
-  <td>main@637513493</td>   <td></td> </tr>
+<tr bgcolor="8eb771">  <td>15/09/03 16:16:16</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ContactRemovalTest.deleteSomeContact()[pri:0, instance:addressbook.tests.ContactRemovalTest@12d37bd8]">deleteSomeContact</td> 
+  <td>main@688040000</td>   <td></td> </tr>
+<tr bgcolor="9b746f">  <td>15/09/03 16:15:43</td>   <td>-33160</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GroupRemovalTests.deleteSomeGroup()[pri:0, instance:addressbook.tests.GroupRemovalTests@2b4b2d2d]">deleteSomeGroup</td> 
+  <td>main@688040000</td>   <td></td> </tr>
+<tr bgcolor="63adb3">  <td>15/09/03 16:15:43</td>   <td>-33726</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ContactModificationTest.modifySomeContact()[pri:0, instance:addressbook.tests.ContactModificationTest@77d7141e]">modifySomeContact</td> 
+  <td>main@688040000</td>   <td></td> </tr>
+<tr bgcolor="687ea5">  <td>15/09/03 16:15:42</td>   <td>-34634</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GroupModificationTests.modifySomeGroup()[pri:0, instance:addressbook.tests.GroupModificationTests@2c307811]">modifySomeGroup</td> 
+  <td>main@688040000</td>   <td></td> </tr>
+<tr bgcolor="95e99d">  <td>15/09/03 16:15:39</td>   <td>-37194</td> <td>&nbsp;</td><td title="&gt;&gt;TestBase.setUp()[pri:0, instance:addressbook.tests.GroupRemovalTests@2b4b2d2d]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@688040000</td>   <td></td> </tr>
+<tr bgcolor="95e99d">  <td>15/09/03 16:16:17</td>   <td>1166</td> <td>&nbsp;</td><td title="&lt;&lt;TestBase.tearDown()[pri:0, instance:addressbook.tests.GroupRemovalTests@2b4b2d2d]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@688040000</td>   <td></td> </tr>
+<tr bgcolor="f986a9">  <td>15/09/03 16:15:44</td>   <td>-31834</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddContact.testAddContact()[pri:0, instance:addressbook.tests.AddContact@8dae665]">testAddContact</td> 
+  <td>main@688040000</td>   <td></td> </tr>
+<tr bgcolor="6dcb6f">  <td>15/09/03 16:15:46</td>   <td>-30598</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EmptyContactCreation.testAddEmptyContact()[pri:0, instance:addressbook.tests.EmptyContactCreation@4ce03186]">testAddEmptyContact</td> 
+  <td>main@688040000</td>   <td></td> </tr>
+<tr bgcolor="689cc5">  <td>15/09/03 16:15:44</td>   <td>-32548</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NonEmptyGroupCreation.testNonEmptyGroupCreation()[pri:0, instance:addressbook.tests.NonEmptyGroupCreation@7a67ab8f]">testNonEmptyGroupCreation</td> 
+  <td>main@688040000</td>   <td></td> </tr>
+<tr bgcolor="6ee7ea">  <td>15/09/03 16:16:17</td>   <td>596</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EmptyGroupCreation.testNonEmptyGroupCreation()[pri:0, instance:addressbook.tests.EmptyGroupCreation@4969fb09]">testNonEmptyGroupCreation</td> 
+  <td>main@688040000</td>   <td></td> </tr>
 </table>
