--- a/address-book-test1/test-output/old/Default suite/methods-not-run.html
+++ b/address-book-test1/test-output/old/Default suite/methods-not-run.html
@@ -5,6 +5,10 @@
 <tr><td>addressbook.tests.TestBase.tearDown</td></tr>
 <tr><td>addressbook.tests.TestBase.tearDown</td></tr>
 <tr><td>addressbook.tests.TestBase.tearDown</td></tr>
+<tr><td>addressbook.tests.TestBase.tearDown</td></tr>
+<tr><td>addressbook.tests.TestBase.tearDown</td></tr>
+<tr><td>addressbook.tests.TestBase.setUp</td></tr>
+<tr><td>addressbook.tests.TestBase.setUp</td></tr>
 <tr><td>addressbook.tests.TestBase.setUp</td></tr>
 <tr><td>addressbook.tests.TestBase.setUp</td></tr>
 <tr><td>addressbook.tests.TestBase.setUp</td></tr>
