--- a/address-book-test1/test-output/old/Default suite/classes.html
+++ b/address-book-test1/test-output/old/Default suite/classes.html
@@ -4,6 +4,28 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
+<td>addressbook.tests.ContactModificationTest</td>
+<td>&nbsp;</td><td>&nbsp;</td></tr>
+<tr>
+<td align='center' colspan='3'>@Test</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>modifySomeContact</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td align='center' colspan='3'>@BeforeClass</td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@BeforeMethod</td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@AfterMethod</td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@AfterClass</td>
+</tr>
+<tr>
 <td>addressbook.tests.EmptyGroupCreation</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
@@ -12,6 +34,28 @@
 <tr>
 <td>&nbsp;</td>
 <td>testNonEmptyGroupCreation</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td align='center' colspan='3'>@BeforeClass</td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@BeforeMethod</td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@AfterMethod</td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@AfterClass</td>
+</tr>
+<tr>
+<td>addressbook.tests.ContactRemovalTest</td>
+<td>&nbsp;</td><td>&nbsp;</td></tr>
+<tr>
+<td align='center' colspan='3'>@Test</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>deleteSomeContact</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
