--- a/address-book-test1/test-output/old/Default suite/methods-alphabetical.html
+++ b/address-book-test1/test-output/old/Default suite/methods-alphabetical.html
@@ -1,24 +1,24 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="8eb771">  <td>15/09/03 16:16:16</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ContactRemovalTest.deleteSomeContact()[pri:0, instance:addressbook.tests.ContactRemovalTest@12d37bd8]">deleteSomeContact</td> 
-  <td>main@688040000</td>   <td></td> </tr>
-<tr bgcolor="9b746f">  <td>15/09/03 16:15:43</td>   <td>-33160</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GroupRemovalTests.deleteSomeGroup()[pri:0, instance:addressbook.tests.GroupRemovalTests@2b4b2d2d]">deleteSomeGroup</td> 
-  <td>main@688040000</td>   <td></td> </tr>
-<tr bgcolor="63adb3">  <td>15/09/03 16:15:43</td>   <td>-33726</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ContactModificationTest.modifySomeContact()[pri:0, instance:addressbook.tests.ContactModificationTest@77d7141e]">modifySomeContact</td> 
-  <td>main@688040000</td>   <td></td> </tr>
-<tr bgcolor="687ea5">  <td>15/09/03 16:15:42</td>   <td>-34634</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GroupModificationTests.modifySomeGroup()[pri:0, instance:addressbook.tests.GroupModificationTests@2c307811]">modifySomeGroup</td> 
-  <td>main@688040000</td>   <td></td> </tr>
-<tr bgcolor="95e99d">  <td>15/09/03 16:15:39</td>   <td>-37194</td> <td>&nbsp;</td><td title="&gt;&gt;TestBase.setUp()[pri:0, instance:addressbook.tests.GroupRemovalTests@2b4b2d2d]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@688040000</td>   <td></td> </tr>
-<tr bgcolor="95e99d">  <td>15/09/03 16:16:17</td>   <td>1166</td> <td>&nbsp;</td><td title="&lt;&lt;TestBase.tearDown()[pri:0, instance:addressbook.tests.GroupRemovalTests@2b4b2d2d]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@688040000</td>   <td></td> </tr>
-<tr bgcolor="f986a9">  <td>15/09/03 16:15:44</td>   <td>-31834</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddContact.testAddContact()[pri:0, instance:addressbook.tests.AddContact@8dae665]">testAddContact</td> 
-  <td>main@688040000</td>   <td></td> </tr>
-<tr bgcolor="6dcb6f">  <td>15/09/03 16:15:46</td>   <td>-30598</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EmptyContactCreation.testAddEmptyContact()[pri:0, instance:addressbook.tests.EmptyContactCreation@4ce03186]">testAddEmptyContact</td> 
-  <td>main@688040000</td>   <td></td> </tr>
-<tr bgcolor="689cc5">  <td>15/09/03 16:15:44</td>   <td>-32548</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NonEmptyGroupCreation.testNonEmptyGroupCreation()[pri:0, instance:addressbook.tests.NonEmptyGroupCreation@7a67ab8f]">testNonEmptyGroupCreation</td> 
-  <td>main@688040000</td>   <td></td> </tr>
-<tr bgcolor="6ee7ea">  <td>15/09/03 16:16:17</td>   <td>596</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EmptyGroupCreation.testNonEmptyGroupCreation()[pri:0, instance:addressbook.tests.EmptyGroupCreation@4969fb09]">testNonEmptyGroupCreation</td> 
-  <td>main@688040000</td>   <td></td> </tr>
+<tr bgcolor="6ee7ea">  <td>15/09/10 18:21:51</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ContactRemovalTest.deleteSomeContact()[pri:0, instance:addressbook.tests.ContactRemovalTest@4969fb09]">deleteSomeContact</td> 
+  <td>main@1836324552</td>   <td></td> </tr>
+<tr bgcolor="f986a9">  <td>15/09/10 18:21:47</td>   <td>-3247</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GroupRemovalTests.deleteSomeGroup()[pri:0, instance:addressbook.tests.GroupRemovalTests@8dae665]">deleteSomeGroup</td> 
+  <td>main@1836324552</td>   <td></td> </tr>
+<tr bgcolor="689cc5">  <td>15/09/10 18:21:47</td>   <td>-3825</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ContactModificationTest.modifySomeContact()[pri:0, instance:addressbook.tests.ContactModificationTest@221abac1]">modifySomeContact</td> 
+  <td>main@1836324552</td>   <td></td> </tr>
+<tr bgcolor="9b746f">  <td>15/09/10 18:21:46</td>   <td>-4692</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GroupModificationTests.modifySomeGroup()[pri:0, instance:addressbook.tests.GroupModificationTests@2b4b2d2d]">modifySomeGroup</td> 
+  <td>main@1836324552</td>   <td></td> </tr>
+<tr bgcolor="63adb3">  <td>15/09/10 18:21:43</td>   <td>-7221</td> <td>&nbsp;</td><td title="&gt;&gt;TestBase.setUp()[pri:0, instance:addressbook.tests.GroupModificationTests@2b4b2d2d]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1836324552</td>   <td></td> </tr>
+<tr bgcolor="63adb3">  <td>15/09/10 18:21:52</td>   <td>1074</td> <td>&nbsp;</td><td title="&lt;&lt;TestBase.tearDown()[pri:0, instance:addressbook.tests.GroupModificationTests@2b4b2d2d]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1836324552</td>   <td></td> </tr>
+<tr bgcolor="a09388">  <td>15/09/10 18:21:49</td>   <td>-2069</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddContact.testAddContact()[pri:0, instance:addressbook.tests.AddContact@5b4bf56d]">testAddContact</td> 
+  <td>main@1836324552</td>   <td></td> </tr>
+<tr bgcolor="8eb771">  <td>15/09/10 18:21:50</td>   <td>-920</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EmptyContactCreation.testAddEmptyContact()[pri:0, instance:addressbook.tests.EmptyContactCreation@2c307811]">testAddEmptyContact</td> 
+  <td>main@1836324552</td>   <td></td> </tr>
+<tr bgcolor="6dcb6f">  <td>15/09/10 18:21:48</td>   <td>-2746</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NonEmptyGroupCreation.testNonEmptyGroupCreation()[pri:0, instance:addressbook.tests.NonEmptyGroupCreation@4ce03186]">testNonEmptyGroupCreation</td> 
+  <td>main@1836324552</td>   <td></td> </tr>
+<tr bgcolor="9bf378">  <td>15/09/10 18:21:51</td>   <td>472</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EmptyGroupCreation.testNonEmptyGroupCreation()[pri:0, instance:addressbook.tests.EmptyGroupCreation@7a67ab8f]">testNonEmptyGroupCreation</td> 
+  <td>main@1836324552</td>   <td></td> </tr>
 </table>
